--- a/package.json
+++ b/package.json
@@ -54,12 +54,15 @@
     "invoker-tokens": "^1.0.13",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
+    "prism-react-renderer": "^0.1.7",
     "prismic-reactjs": "^1.0.0",
     "prismjs": "^1.16.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "react-live": "^2.1.2",
+    "unified-ui": "^0.0.3"
   },
   "devDependencies": {
     "eslint-config-react-app": "^4.0.1",
