--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gatsby-plugin-sass": "^2.0.11",
     "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-plugin-sitemap": "^2.0.12",
+    "gatsby-remark-images": "^3.1.5",
     "gatsby-source-filesystem": "^2.0.29",
     "gatsby-source-prismic-graphql": "^3.2.0",
     "gatsby-transformer-sharp": "^2.1.17",
