--- a/package.json
+++ b/package.json
@@ -27,16 +27,16 @@
     }
   },
   "dependencies": {
-    "@mdx-js/mdx": "^1.0.21",
-    "@mdx-js/react": "^1.0.21",
+    "@mdx-js/mdx": "^1.0.27",
+    "@mdx-js/react": "^1.0.27",
     "@mdx-js/tag": "^0.20.3",
     "classnames": "^2.2.6",
     "gatsby": "^2.13.6",
     "gatsby-image": "^2.0.37",
-    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-google-analytics": "^2.0.19",
     "gatsby-plugin-gtag": "^1.0.10",
     "gatsby-plugin-manifest": "^2.0.28",
+    "gatsby-plugin-mdx": "^1.0.13",
     "gatsby-plugin-nprogress": "^2.0.10",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.12",
@@ -46,7 +46,7 @@
     "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-plugin-sitemap": "^2.0.12",
     "gatsby-remark-images": "^3.1.5",
-    "gatsby-source-filesystem": "^2.0.29",
+    "gatsby-source-filesystem": "^2.1.5",
     "gatsby-source-prismic-graphql": "^3.2.0",
     "gatsby-transformer-sharp": "^2.1.17",
     "glamor": "^2.20.40",
